# file-duplication-finder

./: CMakeLists.txt  README.md
src/: duplication-finder.cc  duplication-finder.cxx  duplication-finder.h  main.cc  main.cxx  vkanalisyng.py
src/processor/: check-sum-processor.cc  check-sum-processor.cxx  check-sum-processor.h  file-system-processor.cc  file-system-processor.cxx  file-system-processor.h
src/processor/concurrency/: thread-pool.cxx  thread-pool.h
src/processor/entity/: file.cc  file.cxx  file.h
